Font-size fixes and nicer comments in vimrc

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -225,7 +225,7 @@
    Page meta
    ========================================================================== */
 
-.page__meta {
+.page__meta, .page__date {
   margin-top: 2em;
   color: mix(#fff, $gray, 25%);
   font-family: $sans-serif;
