--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -40,6 +40,7 @@ $type-size-2                : 1.953em;  // ~31.248px
 $type-size-3                : 1.563em;  // ~25.008px
 $type-size-4                : 1.25em;   // ~20px
 $type-size-5                : 1em;      // ~16px
+$type-size-6plus            : 0.875em;   // ~14px
 $type-size-6                : 0.75em;   // ~12px
 $type-size-7                : 0.6875em; // ~11px
 $type-size-8                : 0.625em;  // ~10px
@@ -57,7 +58,7 @@ $lighter-gray               : mix(#fff, $gray, 90%);
 
 $body-color                 : #fafafa;
 $background-color           : #fafafa;
-$code-background-color      : #fafafa;
+$code-background-color      : #ffffff;
 $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
 $border-color               : $lighter-gray;
