--- a/static.css
+++ b/static.css
@@ -4069,8 +4069,9 @@ font-weight: 500; }.tc-tiddler-frame {
                 0 8px 16px rgba(0,0,0,0.03), 
                 0 16px 32px rgba(0,0,0,0.03) !important;
     border-radius: 4px;
+}p+ul {
+  margin-top:0em;
 }
-
 
 @import url('https://fonts.googleapis.com/css2?family=Literata:wght@400;700&display=swap');.tc-site-title,
 .tc-site-subtitle {
