--- a/static.css
+++ b/static.css
@@ -4076,6 +4076,12 @@ font-weight: 500; }.tc-tiddler-frame {
 .tc-site-title {
    font-size: 1.6em;
 }
+}.tc-tiddler-frame {
+	box-shadow: 0 2px 4px rgba(0,0,0,0.05), 
+                0 4px 8px rgba(0,0,0,0.05), 
+                0 8px 16px rgba(0,0,0,0.05), 
+                0 16px 32px rgba(0,0,0,0.05) !important;
+    border-radius: 4px;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Literata:wght@400;700&display=swap');.tc-site-title,
